src/styles/styles.css
@import 'tailwindcss';
@import './overrides/main';

@theme {
  --font-inter: 'Inter', sans-serif;
  --font-satoshi: 'Satoshi', sans-serif;
  --animate-fadeInUp: fadeInUp 300ms ease-in;

  --color-primary-50: #f0f9ff;
  --color-primary-100: #dff3ff;
  --color-primary-200: #b9e7fe;
  --color-primary-300: #7bd6fe;
  --color-primary-400: #34c1fc;
  --color-primary-500: #0aabed;
  --color-primary-600: #0089cb;
  --color-primary-700: #006da4;
  --color-primary-800: #055c87;
  --color-primary-900: #0a4b6e;
  --color-primary-950: #07304a;

  @keyframes fadeInUp {
    from {
      opacity: 0;
      transform: translateY(10px);
    }
    to {
      opacity: 1;
      transform: translateY(0);
    }
  }
}

@layer base {
  html {
    @apply scroll-smooth hyphens-auto;
  }

  ::-webkit-scrollbar {
    @apply w-1.5 h-1;
  }

  ::-webkit-scrollbar-track {
    @apply shadow-md bg-primary-200/30;
  }

  ::-webkit-scrollbar-thumb {
    @apply rounded-full bg-primary-400;
  }

  button:not(:disabled),
  [role='button']:not(:disabled) {
    cursor: pointer;
  }

  ::selection {
    @apply text-white bg-primary-500;
  }
}

@layer components {
  .carousel-nav-btn {
    @apply h-8 w-8  text-primary-500 flex flex-col items-center justify-center border border-primary-500 hover:bg-primary-500 hover:text-white transition-colors duration-300 rounded-full;
  }

  .primary-link {
    @apply font-semibold text-white px-4 py-1.5 rounded-[2px] bg-primary-500/95 hover:bg-primary-600/95 transition-colors duration-300;
  }

  .secondary-link {
    @apply border border-white rounded-[2px] px-4 py-1.5 text-white hover:bg-white hover:text-primary-500 transition-colors duration-300;
  }
}

